# cs188-cabinet-door-project

./: .gitignore  README.md  install.sh  main.py  pyproject.toml
cabinet_door_project/: 00_verify_installation.py  01_explore_environment.py  02_random_rollouts.py  03_teleop_collect_demos.py  05_playback_demonstrations.py  06_train_policy.py  07_evaluate_policy.py  README.md  notebook.ipynb
cabinet_door_project/configs/: diffusion_policy.yaml
